[gd_scene load_steps=7 format=3 uid="uid://yqwet5yysbyn"]

[ext_resource type="Script" path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dafnc3mbo5eu6" path="res://screenshot.png" id="2"]
[ext_resource type="Font" path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" id="3"]
[ext_resource type="Font" path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMenu.tres" id="4"]
[ext_resource type="Font" path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" id="5"]
[ext_resource type="AudioStream" uid="uid://d3x8m2r7a573r" path="res://addons/Libre_Train_Sim_Editor/Data/Misc/follow-that-dream-by-luca-fraula-from-filmmusic-io.ogg" id="6"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}
version = "0.8"
mobile_version = false

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( "2" )
expand = true
stretch_mode = 7
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Front"]
anchor_bottom = 1.0
alignment = 1
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Front/VBoxContainer"]
offset_top = 214.0
offset_right = 180.0
offset_bottom = 245.0
rect_min_size = Vector2(180, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_PLAY"
script = null

[node name="Content" type="Button" parent="Front/VBoxContainer"]
offset_top = 249.0
offset_right = 180.0
offset_bottom = 280.0
rect_min_size = Vector2(180, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_CONTENT"
script = null

[node name="Create" type="Button" parent="Front/VBoxContainer"]
offset_top = 284.0
offset_right = 180.0
offset_bottom = 315.0
rect_min_size = Vector2(180, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_CREATE"
script = null

[node name="Settings" type="Button" parent="Front/VBoxContainer"]
offset_top = 319.0
offset_right = 180.0
offset_bottom = 350.0
rect_min_size = Vector2(180, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_SETTINGS"
script = null

[node name="Quit" type="Button" parent="Front/VBoxContainer"]
offset_top = 354.0
offset_right = 180.0
offset_bottom = 385.0
rect_min_size = Vector2(180, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_QUIT"
script = null

[node name="VBoxContainerAndoid" type="VBoxContainer" parent="Front"]
visible = false
anchor_bottom = 1.0
alignment = 1
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Front/VBoxContainerAndoid"]
rect_min_size = Vector2(600, 120)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "4" )
text = "MENU_PLAY"
script = null

[node name="Feedback" type="Button" parent="Front/VBoxContainerAndoid"]
grow_horizontal = 0
rect_min_size = Vector2(0, 120)
theme_override_fonts/font = ExtResource( "4" )
text = "MENU_FEEDBACK_WANTED"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Front/VBoxContainerAndoid"]
rect_min_size = Vector2(200, 120)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "4" )
text = "MENU_QUIT"
script = null

[node name="Feedback" type="Button" parent="Front"]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_FEEDBACK_WANTED"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2(400, 563)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuBackground"]
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.180392, 0.184314, 0.223529, 0.960784)
script = null

[node name="Play" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="HBoxContainer" parent="Play"]
size_flags_vertical = 3
script = null

[node name="Tracks" type="VBoxContainer" parent="Play/Selection"]
size_flags_horizontal = 3
script = null

[node name="Label" type="Label" parent="Play/Selection/Tracks"]
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_TRACKS:"
align = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Tracks"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( "5" )
items = ["Strecke 1", null, false]
script = null

[node name="Scenarios" type="VBoxContainer" parent="Play/Selection"]
visible = false
size_flags_horizontal = 3
script = null

[node name="Label" type="Label" parent="Play/Selection/Scenarios"]
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_SCENARIOS:"
align = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Scenarios"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( "5" )
items = ["Strecke 1", null, false]
script = null

[node name="Trains" type="VBoxContainer" parent="Play/Selection"]
visible = false
size_flags_horizontal = 3
script = null

[node name="Label" type="Label" parent="Play/Selection/Trains"]
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_TRAIN:"
align = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Trains"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( "5" )
items = ["Strecke 1", null, false]
script = null

[node name="Info" type="HBoxContainer" parent="Play"]
rect_min_size = Vector2(0, 200)
script = null

[node name="Description" type="RichTextLabel" parent="Play/Info"]
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource( "3" )
custom_effects = []
structured_text_bidi_override_options = []
script = null

[node name="Info" type="VBoxContainer" parent="Play/Info"]
script = null

[node name="Author" type="Label" parent="Play/Info/Info"]
theme_override_fonts/font = ExtResource( "3" )
structured_text_bidi_override_options = []
script = null

[node name="ReleaseDate" type="Label" parent="Play/Info/Info"]
theme_override_fonts/font = ExtResource( "3" )
structured_text_bidi_override_options = []
script = null

[node name="Duration" type="Label" parent="Play/Info/Info"]
theme_override_fonts/font = ExtResource( "3" )
structured_text_bidi_override_options = []
script = null

[node name="EasyMode" type="CheckBox" parent="Play/Info/Info"]
visible = false
theme_override_fonts/font = ExtResource( "3" )
pressed = true
text = "MENU_EASY_MODE"
script = null

[node name="Screenshot" type="TextureRect" parent="Play/Info"]
rect_min_size = Vector2(356, 0)
expand = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Play"]
script = null

[node name="Back" type="Button" parent="Play/Buttons"]
rect_min_size = Vector2(200, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_BACK"
script = null

[node name="Play" type="Button" parent="Play/Buttons"]
rect_min_size = Vector2(200, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_PLAY"
script = null

[node name="Content" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content"]
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_TO_ADD_CONTENT"
structured_text_bidi_override_options = []
script = null

[node name="Label2" type="Label" parent="Content"]
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_CURRENT_LOADED_PACKS"
structured_text_bidi_override_options = []
script = null

[node name="ItemList" type="ItemList" parent="Content"]
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( "3" )
items = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Content"]
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_HINT_UPDATED_CONTENT_PACK"
structured_text_bidi_override_options = []
script = null

[node name="Buttons" type="HBoxContainer" parent="Content"]
script = null

[node name="Back" type="Button" parent="Content/Buttons"]
rect_min_size = Vector2(200, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_BACK"
script = null

[node name="Reload" type="Button" parent="Content/Buttons"]
rect_min_size = Vector2(200, 0)
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "5" )
text = "MENU_RELOAD"
script = null

[node name="Loading" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( "4" )
text = "MENU_LOADING"
structured_text_bidi_override_options = []
script = null

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource( "3" )
text = "Version: 0.0"
align = 2
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Music" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_MUSIC:"
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedBack" type="Node" parent="."]
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FeedBack"]
anchor_right = 1.0
anchor_bottom = 1.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="FeedBack/VBoxContainer"]
offset_right = 800.0
offset_bottom = 565.0
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource( "3" )
text = "MENU_FEEDBACK_QUESTION"
custom_effects = []
structured_text_bidi_override_options = []
script = null

[node name="HBoxContainer" type="HBoxContainer" parent="FeedBack/VBoxContainer"]
offset_top = 569.0
offset_right = 800.0
offset_bottom = 600.0
size_flags_horizontal = 3
script = null

[node name="Later" type="Button" parent="FeedBack/VBoxContainer/HBoxContainer"]
offset_right = 398.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_LATER"
script = null

[node name="OpenWebBrowser" type="Button" parent="FeedBack/VBoxContainer/HBoxContainer"]
offset_left = 402.0
offset_right = 800.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( "3" )
text = "MENU_OPEN_IN_BROWSER"
script = null

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "6" )
volume_db = -25.384
bus = &"Music"
script = null

[connection signal="pressed" from="Front/VBoxContainer/Play" to="." method="_on_PlayFront_pressed"]
[connection signal="pressed" from="Front/VBoxContainer/Content" to="." method="_on_Content_pressed"]
[connection signal="pressed" from="Front/VBoxContainer/Create" to="." method="_on_FrontCreate_pressed"]
[connection signal="pressed" from="Front/VBoxContainer/Settings" to="." method="_on_SettingsFront_pressed"]
[connection signal="pressed" from="Front/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Front/VBoxContainerAndoid/Play" to="." method="_on_PlayFront_pressed"]
[connection signal="pressed" from="Front/VBoxContainerAndoid/Feedback" to="." method="_on_ButtonFeedback_pressed"]
[connection signal="pressed" from="Front/VBoxContainerAndoid/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Front/Feedback" to="." method="_on_ButtonFeedback_pressed"]
[connection signal="item_selected" from="Play/Selection/Tracks/ItemList" to="." method="_on_ItemList_itemTracks_selected"]
[connection signal="item_selected" from="Play/Selection/Scenarios/ItemList" to="." method="_on_ItemList_scenario_selected"]
[connection signal="item_selected" from="Play/Selection/Trains/ItemList" to="." method="_on_ItemList_Train_selected"]
[connection signal="pressed" from="Play/Buttons/Back" to="." method="_on_BackPlay_pressed"]
[connection signal="pressed" from="Play/Buttons/Play" to="." method="_on_PlayPlay_pressed"]
[connection signal="pressed" from="Content/Buttons/Back" to="." method="_on_BackContent_pressed"]
[connection signal="pressed" from="Content/Buttons/Reload" to="." method="_on_ReloadContent_pressed"]
[connection signal="pressed" from="FeedBack/VBoxContainer/HBoxContainer/Later" to="." method="_on_Later_pressed"]
[connection signal="pressed" from="FeedBack/VBoxContainer/HBoxContainer/OpenWebBrowser" to="." method="_on_OpenWebBrowser_pressed"]
